--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,18 +5,18 @@ $font-family: 'Open Sans', sans-serif;
 $logo-color: #444;
 $logo-size: 28pt;
 
-/* open-sans-regular - latin */
+/* open-sans-300 - latin */
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
-  font-weight: 400;
-  src: url('/fonts/open-sans-v18-latin-regular.eot'); /* IE9 Compat Modes */
+  font-weight: 300;
+  src: url('/fonts/open-sans-v18-latin-300.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/open-sans-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/fonts/open-sans-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/open-sans-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('/fonts/open-sans-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/fonts/open-sans-v18-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+       url('/fonts/open-sans-v18-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/open-sans-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/open-sans-v18-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/open-sans-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/open-sans-v18-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
 html, body {
