--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="v">
   <div id="logo">Uplink</div>
   <div id="footer" class="h">
-    <div>Viborg, Denmark</div>
+    <div>Hørning, Denmark</div>
     <div>CVR: 41527471</div>
     <div>hi@uplink.io</div>
   </div>
