Add viewport meta tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <title>Uplink</title>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/style.css">
   </head>
 
